# Sonar

./: meson.build
.cache/clangd/index/: app.c.3CC7254A49E92CB1.idx  audio.c.629255AF32A7E5AB.idx  config.c.AFD95BE1669913B7.idx  logger.c.B6165DC403DAE183.idx  main.c.6B2718D70A527B4F.idx  mixer.c.A356640E7A6A2ECF.idx  mixer.h.7E285867E9DB15E3.idx  mixer_ui.c.1DAD15FB1FC8A40B.idx  normal.c.A407FABEA1170DE4.idx  normal.h.EF214F802365B9EF.idx  normal_ui.c.85641E15CD776EAC.idx
src/: main.c  meson.build
src/include/mixer/: mixer.h
src/include/normal/: normal.h
src/mixer/: mixer.c  mixer_ui.c  mixer_ui.h
src/normal/: normal.c
